# EagleTools

./: .gitignore  Dockerfile.bot  Dockerfile.web  Dockerfile.worker  PROJECT_TREE.txt  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_add_metadata.py
app/bot/: internal_api.py  middleware.py
app/bot/i18n/: __init__.py  strings.py
app/bot/keyboards/: admin.py  audio_format.py  back.py  main.py  nav.py  premium.py  profile.py  settings.py  smart.py  tools.py
app/bot/routers/: __init__.py
app/bot/routers/admin/: __init__.py  broadcast.py  panel.py
app/bot/routers/public/: audio_format.py  navigation.py  premium.py  profile.py  smart_router.py  start.py
app/bot/services/: api_client.py  ctx_store.py
app/common/: config.py  logging.py  pidlock.py
app/domain/models/: user.py
app/domain/services/: bot_api.py  capabilities.py  cryptobot.py  jobs.py  panel.py  premium.py  progress.py  queue.py  quota.py  referrals.py  telegram_auth.py  ui.py  user_queue.py  user_repo.py  users.py
app/infra/db/: alembic_settings.py  base.py  engine.py  init_db.py  schema.py  session.py  uow.py
app/infra/queue/: arq.py
app/main/: bot.py  smoke.py  worker.py  worker_run.py
app/web/: __init__.py  app.py  deps.py  middleware.py
app/web/routes/: api.py  convert.py  internal.py  profile.py  recent.py  ui.py
app/web/static/: api.js  app.js  converter.js  onboarding.css  onboarding.js  profile.js  smart-input.js  styles.css
app/web/templates/: index.html
landing/: index.html
(+18 files in other folders)
